feat: add playlist endpoint
