# spec/openapi.yaml
@@ -44,18 +44,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
+  /playlist:
     post:
       operationId: createPlaylist
       tags:
         - playlist
       summary: create playlist
-      parameters:
-        - name: id
-          in: path
-          description: id
-          required: true
-          schema:
-            type: integer
       requestBody:
         content:
           application/json:
